syntax = "proto3";

option go_package = "scheduleGrpc/";


service ScheduleService {
  rpc CreateSchedule(CreateScheduleRequest) returns (CreateScheduleResponse) {}
}

message CreateScheduleRequest {
  string from = 1;
  string type = 2;
  string cron_expression = 3;
  string deadline = 4;
  string reply_on = 5;
  string x_api_key = 6;
  string data = 7;
}

message CreateScheduleResponse {
  bool isSuccess = 1;
}